# alpha-engine-lib

./: .gitignore  OVERVIEW.md  README.md  pyproject.toml
.github/workflows/: test.yml
src/alpha_engine_lib/: __init__.py  agent_schemas.py  anthropic_payload.py  arcticdb.py  collector_results.py  cost.py  dates.py  decision_capture.py  email_sender.py  eval_artifacts.py  logging.py  pillars.py  preflight.py  secrets.py  telegram.py  trading_calendar.py  transparency.py  transparency_inventory.yaml
src/alpha_engine_lib/contracts/: __init__.py  __main__.py  predictions.schema.json
src/alpha_engine_lib/pipeline_status/: registry.py
src/alpha_engine_lib/rag/: __init__.py  rerank.py  retrieval.py
src/alpha_engine_lib/sources/: __init__.py
tests/: test_agent_schemas.py  test_alerts.py  test_anthropic_payload.py  test_arcticdb.py  test_collector_results.py  test_contracts.py  test_cost.py  test_dates.py  test_decision_capture.py  test_email_sender.py  test_eval_artifacts.py  test_flow_doctor_default_on.py  test_logging.py  test_pillars.py  test_preflight.py  test_rag.py  test_rag_rerank.py  test_rag_retrieval_hybrid.py  test_secrets.py  test_sources_protocols.py  test_telegram.py  test_trading_calendar.py  test_transparency.py  test_universe.py  test_version_pin.py
