[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alpha-engine-lib"
version = "0.5.0"
description = "Shared utilities for Alpha Engine modules — preflight, logging, ArcticDB, dates, calendar, decision capture, cost tracking, RAG, agent output schemas, and transparency-substrate health checks"
readme = "README.md"
# EC2 still runs Python 3.9 on the always-on micro instance (boto3 drops
# 3.9 support 2026-04-29, so upgrade is on the near-term roadmap). All
# modules in this package use ``from __future__ import annotations``, so
# PEP 604 union syntax (``str | None``) is deferred and works on 3.9.
requires-python = ">=3.9"
authors = [{ name = "Brian McMahon" }]
license = { text = "Proprietary" }
dependencies = [
    "boto3>=1.34",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
arcticdb = ["arcticdb>=6.11", "pandas>=2.0"]
flow_doctor = ["flow-doctor[diagnosis,s3]>=0.4.0,<0.5.0"]
rag = [
    "psycopg2-binary>=2.9",
    "pgvector>=0.2",
    "numpy>=1.24",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "moto>=5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"alpha_engine_lib" = ["transparency_inventory.yaml"]
"alpha_engine_lib.rag" = ["schema.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
